[metadata]
# Derived from https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
name = identity
version = attr: identity.__version__
description = This is an authentication/authorization library, currently optimized for web apps. It provides some higher level APIs built on top of Microsoft's MSAL Python.
author = Ray Luo
author_email = rayluo.mba@gmail.com
url = https://github.com/rayluo/identity
project_urls =
    Changelog = https://github.com/rayluo/identity/releases
    Documentation = https://identity-library.readthedocs.io/
keywords = identity, auth, authentication, authorization
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

# NOTE: Settings of this section below this line should not need to be changed

long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
install_requires =
    msal>=1.28,<2
    requests>=2.0.0,<3
    # importlib; python_version == "2.6"
    # See also https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html#dependency-management

# NOTE: Settings of this section below this line should not need to be changed
#packages = find:
# If this project ships namespace package, then use the next line instead.
# See also https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html#using-find-namespace-or-find-namespace-packages
#
# "Treat data as a namespace package" - https://setuptools.pypa.io/en/latest/userguide/datafiles.html#subdirectory-for-data-files
packages = find_namespace:

include_package_data = True

[options.extras_require]
# Examples:
# secure = crytography
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3
all_for_docs =
    # This is for building docs. App developers need not use this.
    %(django)s
    %(flask)s
    %(quart)s
django =
    # Since we currently still supports Python 3.7, we choose Django version accordingly.
    # See https://docs.djangoproject.com/en/5.0/faq/install/#what-python-version-can-i-use-with-django
    django>=3.2,<6
flask =
    flask
    # If Flask-Session is not maintained in future, Flask-Session2 should work as well
    Flask-Session>=0.3.2,<0.6
quart =
    quart
    # Note that Quart-session is a no-op by default.
    # The calling app shall declare its backend of choice, e.g., Redis, Memcached, etc.
    # See also https://github.com/kroketio/quart-session?tab=readme-ov-file#features
    # Some backends would require additional dependencies, e.g., quart-session[redis]
    # https://github.com/kroketio/quart-session/blob/249a7abd89163d20e1ec03a3fe61e9bc7d753d7c/setup.py#L43-L44
    Quart-Session

[options.entry_points]
# See also https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html
console_scripts =
    # executable_name = [package.subpackage.]module[:object.object]
gui_scripts =

[options.packages.find]
# Derived from https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
exclude = tests

[options.package_data]
identity.templates.identity =
    *.html

[bdist_wheel]
universal=0

